src/objects/S3_File__c.object
<CustomObject>
    <description>This is an object for storing S3 file representations.</description>
    <fields>
        <fullName>Acl__c</fullName>
        <description>The access control level of the file.</description>
        <label>Acl</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bucket__c</fullName>
        <description>The name of the bucket the file is contained in.</description>
        <label>Bucket</label>
        <length>125</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Type__c</fullName>
        <description>The content type of the file.</description>
        <label>Content_Type</label>
        <length>125</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A connection between the S3 File reference and the Document__c object.</description>
        <label>Document</label>
        <referenceTo>Document__c</referenceTo>
        <relationshipLabel>S3 Files</relationshipLabel>
        <relationshipName>S3_Files</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Filename__c</fullName>
        <description>The name of the file.</description>
        <label>Filename</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyObjectId__c</fullName>
        <label>LegacyObjectId</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prefix__c</fullName>
        <description>The prefix for the file.</description>
        <inlineHelpText>The originating object&apos;s ID typically.</inlineHelpText>
        <label>Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>S3 File</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Filename__c</columns>
        <columns>Content_Type__c</columns>
        <columns>Description__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>S3 Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>